--- a/app/src/main/res/layout/comics_scroll_view_item.xml
+++ b/app/src/main/res/layout/comics_scroll_view_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -12,11 +12,15 @@
             type="com.phearme.comixkcd.MainViewModel"/>
     </data>
     <android.support.v7.widget.CardView
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:onClick="@{() -> viewModel.onComicClick(comic)}"
         card_view:cardElevation="18dp"
         card_view:cardCornerRadius="5dp"
         android:layout_width="240dp"
         android:layout_height="320dp"
-        android:layout_gravity="top">
+        android:layout_gravity="top"
+        tools:ignore="KeyboardInaccessibleWidget">
         <android.support.v7.widget.AppCompatImageView
             app:loadWithGlide="@{comic.img}"
             android:layout_width="match_parent"
