--- a/app/src/main/res/layout/comics_scroll_view_item.xml
+++ b/app/src/main/res/layout/comics_scroll_view_item.xml
@@ -14,7 +14,7 @@
     <android.support.v7.widget.CardView
         android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
-        android:onClick="@{() -> viewModel.onComicClick(comic)}"
+        android:onClick="@{(view) -> viewModel.onComicClick(view, comic)}"
         card_view:cardElevation="18dp"
         card_view:cardCornerRadius="5dp"
         android:layout_width="240dp"
@@ -22,6 +22,8 @@
         android:layout_gravity="top"
         tools:ignore="KeyboardInaccessibleWidget">
         <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/imgviewComicItem"
+            android:transitionName="comicimage"
             app:loadWithGlide="@{comic.img}"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
