--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportHeight="108"
-    android:viewportWidth="108">
+    android:width="154dp"
+    android:height="154dp"
+    android:viewportWidth="154"
+    android:viewportHeight="154">
     <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+        android:pathData="M73.9,18.1c-2.2,2.8 -2.6,3 -5.3,1.9 -2.1,-0.8 -3.2,-0.8 -4,-0 -0.8,0.8 -0.4,1.2 1.2,1.7 2,0.5 2.1,0.7 0.9,2.2 -4.5,5 -6.4,14 -4.5,20.9 1.2,4.5 6.1,9.8 10.3,11.2 3.8,1.3 11.6,-0.9 15.1,-4.2 2.9,-2.6 5.7,-10.2 5.2,-13.9 -0.4,-2.8 -0.3,-3 2.4,-2.4 3.5,0.8 3.8,-1.1 0.3,-2.7 -2.9,-1.3 -3.1,-2.1 -1,-3.8 3.2,-2.6 1.3,-5.2 -7,-9.7 -4.4,-2.3 -8.7,-4.3 -9.6,-4.3 -0.9,-0 -2.7,1.4 -4,3.1zM81,28.1c4.1,2.3 7.8,4.6 8.2,5.3 1.3,1.9 0.9,8.4 -0.8,12.5 -1.2,3 -2.6,4.4 -6,6 -5.6,2.7 -8.3,2.6 -12.5,-0.2 -5.5,-3.7 -7.3,-11.6 -4.4,-19.8 1.8,-5 4.1,-7.9 6.4,-7.9 0.9,-0 5,1.9 9.1,4.1z"
+        android:fillColor="#ffffff"
+        android:strokeColor="#ffffff"/>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1" />
+        android:pathData="M77.5,65.7c-1.5,4.8 -4.3,13 -6.2,18.1 -1.9,5.2 -3.2,9.7 -2.8,10 1.2,1.3 3.2,-2.7 7,-14.1 4.3,-12.8 5.5,-14.8 5.5,-9.1 0,7.8 -3.1,24.2 -7.4,39.4 -5.3,18.5 -9.1,34.9 -8.3,35.6 1.1,1.2 2.7,-0.8 2.7,-3.3 0,-3.6 10.1,-42.7 11.3,-43.9 0.2,-0.2 1.6,7.4 3.1,16.9 3.7,22.8 6.2,31.8 8,28.8 0.4,-0.6 -0.2,-4.1 -1.3,-7.8 -1.1,-3.7 -2.9,-13.1 -4.1,-20.8 -1.1,-7.7 -2.5,-16.6 -3,-19.9 -0.5,-3.2 -0.7,-6.3 -0.4,-6.8 0.3,-0.5 0.9,-6 1.3,-12.1l0.7,-11.2 4.2,13.5c2.4,7.4 4.5,14.2 4.8,15 0.5,1.3 0.7,1.3 1.5,-0.1 0.6,-1.2 -0.8,-6.7 -4.9,-19 -7,-21.3 -7.9,-21.9 -11.7,-9.2z"
+        android:fillColor="#ffffff"
+        android:strokeColor="#ffffff"/>
 </vector>
