--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,7 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:fontFamily">@font/xkcd_script</item>
     </style>
 
 </resources>
