--- a/app/src/main/res/layout/activity_comic_viewer.xml
+++ b/app/src/main/res/layout/activity_comic_viewer.xml
@@ -1,38 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@android:color/white"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ComicViewerActivity">
-    <com.github.chrisbanes.photoview.PhotoView
-        android:transitionName="comicimage"
-        android:keepScreenOn="true"
-        android:id="@+id/comic_photo_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.phearme.comixkcd.ComicViewerViewModel"/>
+    </data>
     <FrameLayout
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
-        <LinearLayout
-            android:id="@+id/fullscreen_content_controls"
-            style="?metaButtonBarStyle"
+        tools:context=".ComicViewerActivity">
+        <com.github.chrisbanes.photoview.PhotoView
+            android:transitionName="comicimage"
+            android:keepScreenOn="true"
+            android:id="@+id/comic_photo_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/black_overlay"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
-            <Button
-                android:foreground="?android:attr/selectableItemBackground"
-                android:textColor="@android:color/white"
-                android:id="@+id/close_button"
-                android:background="@color/black_overlay"
-                android:layout_width="0dp"
+            android:layout_height="match_parent"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true">
+            <LinearLayout
+                android:id="@+id/fullscreen_content_controls"
+                style="?metaButtonBarStyle"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/close"/>
-        </LinearLayout>
+                android:layout_gravity="bottom|center_horizontal"
+                android:background="@color/black_overlay"
+                android:orientation="horizontal"
+                tools:ignore="UselessParent">
+                <Button
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:textColor="@android:color/white"
+                    android:id="@+id/close_button"
+                    android:background="@color/black_overlay"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/close"/>
+            </LinearLayout>
+        </FrameLayout>
     </FrameLayout>
-</FrameLayout>
+</layout>
