--- a/app/src/main/res/layout/comics_scroll_view_item.xml
+++ b/app/src/main/res/layout/comics_scroll_view_item.xml
@@ -9,7 +9,7 @@
             type="com.phearme.xkcdclient.Comic"/>
         <variable
             name="viewModel"
-            type="com.phearme.comixkcd.MainViewModel"/>
+            type="com.phearme.comixkcd.viewmodels.MainViewModel"/>
     </data>
     <android.support.v7.widget.CardView
         android:foreground="?android:attr/selectableItemBackground"
