--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3f414d</color>
     <color name="colorAccent">#84ceca</color>
     <color name="black_overlay">#66000000</color>
+    <color name="app_green_light">#2be2d5</color>
 </resources>
