--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
+        <import type="android.view.View" />
         <variable
             name="viewModel"
             type="com.phearme.comixkcd.viewmodels.MainViewModel"/>
     </data>
     <android.support.design.widget.CoordinatorLayout
+        android:animateLayoutChanges="true"
         android:id="@+id/parentLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,14 +36,42 @@
             bind:viewModel="@{viewModel}"
             layout="@layout/content_main" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:onClick="@{viewModel::onShuffleButtonClick}"
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <LinearLayout
             android:layout_gravity="bottom|center_horizontal"
-            android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/ic_shuffle_white_24dp" />
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.FloatingActionButton
+                android:elevation="0dp"
+                app:elevation="0dp"
+                android:visibility="@{viewModel.currentPosition == 0 ? View.INVISIBLE : View.VISIBLE}"
+                android:onClick="@{() -> viewModel.onRewindClick()}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="0dp"
+                app:fabSize="mini"
+                app:srcCompat="@drawable/ic_fast_rewind" />
+            <android.support.design.widget.FloatingActionButton
+                android:elevation="0dp"
+                app:elevation="0dp"
+                android:onClick="@{viewModel::onShuffleButtonClick}"
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/fab_margin"
+                app:srcCompat="@drawable/ic_shuffle_white_24dp" />
+            <android.support.design.widget.FloatingActionButton
+                android:elevation="0dp"
+                app:elevation="0dp"
+                android:visibility="@{viewModel.currentPosition == (viewModel.comics.size() - 1) ? View.INVISIBLE : View.VISIBLE}"
+                android:onClick="@{() -> viewModel.onFastForwardClick()}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="0dp"
+                app:fabSize="mini"
+                app:srcCompat="@drawable/ic_fast_forward" />
+        </LinearLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
