--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#84ceca</color>
     <color name="black_overlay">#66000000</color>
     <color name="app_green_light">#2be2d5</color>
+    <color name="almost_white">#fafafa</color>
 </resources>
