--- a/app/src/main/res/drawable/back_overlay_panel.xml
+++ b/app/src/main/res/drawable/back_overlay_panel.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/black_overlay"/>
+    <gradient
+        android:angle="90"
+        android:startColor="@color/black_overlay_dark"
+        android:endColor="@color/black_overlay"
+        android:type="linear"/>
     <corners
         android:bottomLeftRadius="0dp"
         android:bottomRightRadius="0dp"
