--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#555760</color>
     <color name="colorPrimaryDark">#3f414d</color>
     <color name="colorAccent">#84ceca</color>
-    <color name="black_overlay">#66000000</color>
+    <color name="black_overlay">#55000000</color>
+    <color name="black_overlay_dark">#a9000000</color>
     <color name="app_green_light">#2be2d5</color>
     <color name="almost_white">#fafafa</color>
 </resources>
